# FastLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-linux.sh
installer/: fastlog_nsis.nsi
src/: analyzer.cpp  analyzer.hpp  main.cpp  simd.hpp  stats.hpp
